# diagram-code

./: DESIGN.md  README.md  diagram-as-code-research.md  pyproject.toml
code_de_diagram/: __init__.py  cli.py  config.py  models.py  prompts.py  renderer.py  spec_parser.py  vlm_verifier.py
code_de_diagram/solutions/: __init__.py  direct.py  structured.py
example/: README.md  SPEC.md  run_evaluation.py
tests/: __init__.py  conftest.py  test_config.py  test_e2e.py  test_integration_llm.py  test_integration_vlm.py  test_models.py  test_renderer.py  test_solution_direct.py  test_solution_structured.py  test_spec_parser.py
