[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-de-diagram"
version = "0.1.0"
description = "LLM-driven architecture diagram generation using the Python diagrams library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "runyaga", email="alan@enfoldsystems.com"},
    {name = "claude"}
]
keywords = [
    "diagrams",
    "architecture",
    "llm",
    "ai",
    "aws",
    "cloud",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.1",
    "diagrams>=0.23",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
ollama = [
    "ollama>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
code-de-diagram = "code_de_diagram.cli:main"
code-de-diagram-direct = "code_de_diagram.cli:main_direct"
code-de-diagram-structured = "code_de_diagram.cli:main_structured"

[project.urls]
Homepage = "https://github.com/example/code-de-diagram"
Documentation = "https://github.com/example/code-de-diagram#readme"
Repository = "https://github.com/example/code-de-diagram"
Issues = "https://github.com/example/code-de-diagram/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_de_diagram"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
